# plague-translate

./: .gitignore  README.md  pyproject.toml
app/backend/: app.py  server.py  wsgi.py
app/backend/favicon/: favicon.py
app/backend/home/: home.py
app/frontend/base/: base.html
app/frontend/home/: home.html
ui/base/styles/: header.css  nav.css  theme.css
