[tool.poetry]
name = "plague-translate"
version = "0.1.0"
description = "PLAGUE: Time Wanderer - Translate"
authors = ["Virinas-code <alexcode228@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pylint = "^2.12.2"
ipython = "^7.30.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
